[package]
name = "rustui"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "0.29.0", default-features = false, features = [
  "accesskit",     # Make egui compatible with screen readers. NOTE: adds a lot of dependencies.
  "wgpu",          # Use the glow rendering backend. Alternative: "wgpu".
] }
serde_json = "1.0.133"
